[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/menus/Lobby.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/GUILabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/gui/GUIButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/iosevka-bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/m5x7.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[node name="Lobby" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1000.0

[node name="Options" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 838.0
margin_bottom = 920.0
size_flags_horizontal = 3

[node name="Title" parent="HBoxContainer/Options" instance=ExtResource( 2 )]
margin_right = 838.0
margin_bottom = 13.0
text = "Options"
align = 1

[node name="Start" parent="HBoxContainer/Options" instance=ExtResource( 3 )]
margin_top = 17.0
margin_right = 838.0
margin_bottom = 36.0
text = "Start"

[node name="StageSelect" type="OptionButton" parent="HBoxContainer/Options"]
margin_top = 40.0
margin_right = 838.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 52 )
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
align = 1

[node name="Spacer" type="Control" parent="HBoxContainer/Options"]
margin_top = 96.0
margin_right = 838.0
margin_bottom = 897.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Leave" parent="HBoxContainer/Options" instance=ExtResource( 3 )]
margin_top = 901.0
margin_right = 838.0
margin_bottom = 920.0
text = "Leave"

[node name="Players" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 842.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_horizontal = 3

[node name="Title" parent="HBoxContainer/Players" instance=ExtResource( 2 )]
margin_right = 838.0
margin_bottom = 13.0
text = "Player list"
align = 1

[node name="PlayerList" type="ItemList" parent="HBoxContainer/Players"]
margin_top = 17.0
margin_right = 838.0
margin_bottom = 920.0
size_flags_vertical = 3
theme = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
auto_height = true
[connection signal="pressed" from="HBoxContainer/Options/Start" to="." method="_on_Start_pressed"]
[connection signal="item_selected" from="HBoxContainer/Options/StageSelect" to="." method="_on_StageSelect_item_selected"]
[connection signal="pressed" from="HBoxContainer/Options/Leave" to="." method="_on_Leave_pressed"]
